eliminate the tedious works of handling communications errors and 
parsing JSON results.

Android and Python Desktop application developers can access 
remote SQL databases and/or SQL databases in the cloud by simply 
including standard JDBC calls in their code, just like 
they would for a local database.

The AceQL Python Client SDK is licensed under the Apache 2.0
License.

AceQL Python Client SDK - Version 5.3 - 22-Feb-2022
----------------------------------------------------

What's New:
- The new Cursor.execute_server_query method allows
  calling a remote server class that returns directly
  the result of a SELECT.


AceQL Python Client SDK - Version 5.2 - 03-Dec-2021
----------------------------------------------------

What's New:
- Python 3.10 is now supported.
- The new AceQLConnection.get_database_info() API allows to easily
  get all info about the remote database and the remote DBC Driver.


AceQL Python Client SDK - Version 5.1 - 04-Nov-2021
---------------------------------------------------

What's New:
-The ConnectionInfo class includes the new get_creation_datetime()
 method that indicates when the AceQL Connection with the remote
 server was established.


AceQL Python Client SDK - Version 5.0.1 - 02-Sep-2021
-----------------------------------------------------

What's New:
- Cursor.executemany is now supported in order to
  allow fast INSERT and UPDATE calls.


AceQL Python Client SDK - Version 4.2.2 - 02-Aug-2021
-----------------------------------------------------

Bugs fixed:
- Remove some unnecessary debug calls.


AceQL Python Client SDK - Version 4.2.1 - 20-Jul-2021
-----------------------------------------------------

Bugs fixed:
- "connection" label was not passed correctly in
  underlying URLs.
  This could cause trouble with future AceQL Server
  versions.


AceQL Python Client SDK - Version 4.2 - 10-Jun-2021
---------------------------------------------------

What's New:
- Cursor.mogrify DB API extension has been added.